--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,15 +45,6 @@
                 android:textSize="15dp"
                 android:layout_weight="0.4"/>
 
-            <!--<TextView-->
-                <!--android:id="@+id/meterY"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_gravity="bottom|right"-->
-                <!--android:text="      yMeters"-->
-                <!--android:textSize="15dp"-->
-                <!--android:layout_weight=".166"/>-->
-
             <TextView
                 android:id="@+id/quad2pixel"
                 android:layout_width="wrap_content"
@@ -266,8 +257,7 @@
             fab:fab_title="Send All"
             fab:fab_colorNormal="@android:color/white"
             fab:fab_colorPressed="@android:color/white"
-            fab:fab_icon="@android:drawable/ic_menu_send"
-            fab:fab_size="mini" />
+            fab:fab_icon="@android:drawable/ic_menu_send" />
     </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
 
@@ -282,7 +272,7 @@
         android:layout_margin="@dimen/fab_margin"
         fab:fab_addButtonColorNormal="@android:color/holo_purple"
         fab:fab_colorPressed="@android:color/holo_orange_light"
-        fab:fab_icon="@android:drawable/ic_menu_send"
+        fab:fab_icon="@android:drawable/ic_menu_close_clear_cancel"
         fab:fab_expandDirection="right">
 
         <com.getbase.floatingactionbutton.FloatingActionButton
@@ -322,8 +312,7 @@
             fab:fab_title="Send All"
             fab:fab_colorNormal="@android:color/black"
             fab:fab_colorPressed="@android:color/black"
-            fab:fab_icon="@android:drawable/ic_menu_close_clear_cancel"
-            fab:fab_size="mini"/>
+            fab:fab_icon="@android:drawable/ic_menu_close_clear_cancel" />
     </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
 </android.support.design.widget.CoordinatorLayout>
