--- a/app/src/main/res/layout/activity_preview.xml
+++ b/app/src/main/res/layout/activity_preview.xml
@@ -11,6 +11,7 @@
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_gravity="center_horizontal|top"
+            android:paddingTop="5dp"
             android:orientation="horizontal">
 
             <utmg.android_interface.PreviewCanvas
