Added play/pause button to PreviewActivity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -103,7 +103,7 @@
 
     <ImageView
         android:id="@+id/quad2"
-        android:layout_width="60dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:layout_gravity="center"
@@ -113,7 +113,7 @@
 
     <ImageView
         android:id="@+id/quad3"
-        android:layout_width="60dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:layout_gravity="center"
@@ -124,7 +124,7 @@
     <ImageView
         android:id="@+id/sword"
         android:layout_width="wrap_content"
-        android:layout_height="80dp"
+        android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:layout_gravity="center"
         android:src="@drawable/sword"
