Made small design changes and started working on seekAll, sort of

--- a/app/src/main/res/drawable/preview_seekbar_progress2.xml
+++ b/app/src/main/res/drawable/preview_seekbar_progress2.xml
@@ -5,6 +5,7 @@
             <gradient android:useLevel="true"
                 android:startColor="@android:color/holo_green_light"
                 android:endColor="#000000"/>
+            <corners android:radius="50dp"/>
         </shape>
     </item>
 </layer-list>
