--- a/app/src/main/res/drawable/preview_seekbar_progress4.xml
+++ b/app/src/main/res/drawable/preview_seekbar_progress4.xml
@@ -2,9 +2,8 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <gradient android:useLevel="true"
-                android:startColor="#aaaaaa"
-                android:endColor="#000000"/>
+            <solid android:color="@android:color/darker_gray"/>
+            <corners android:radius="50dp"/>
         </shape>
     </item>
 </layer-list>
