--- a/app/src/main/res/drawable/preview_seekbar_thumb1.xml
+++ b/app/src/main/res/drawable/preview_seekbar_thumb1.xml
@@ -8,10 +8,13 @@
         android:endColor="#454455"/>
 
     <size
-    android:width="10dp"
-    android:height="30dp" />
+        android:width="10dp"
+        android:height="30dp" />
 
     <solid
-    android:color="@android:color/holo_red_dark" />
+        android:color="@android:color/holo_red_dark" />
+
+    <corners
+        android:radius="50dp"/>
 
 </shape>
