--- a/app/src/main/res/drawable/preview_seekbar_thumb2.xml
+++ b/app/src/main/res/drawable/preview_seekbar_thumb2.xml
@@ -14,4 +14,7 @@
     <solid
         android:color="@android:color/holo_green_dark" />
 
+    <corners
+        android:radius="50dp"/>
+
 </shape>
