--- a/app/src/main/res/drawable/preview_seekbar_thumb4.xml
+++ b/app/src/main/res/drawable/preview_seekbar_thumb4.xml
@@ -9,10 +9,10 @@
 
     <size
         android:width="10dp"
-        android:height="30dp" />
+        android:height="50dp" />
 
     <solid
-        android:color="@android:color/darker_gray" />
+        android:color="@android:color/holo_orange_dark" />
 
     <corners
         android:radius="50dp"/>
