--- a/app/src/main/res/layout/activity_preview.xml
+++ b/app/src/main/res/layout/activity_preview.xml
@@ -104,7 +104,7 @@
                     android:layout_gravity="center"
                     android:paddingBottom="15dp"
                     android:paddingTop="15dp"
-                    android:progressDrawable="@drawable/preview_seekbar_progress4"
+                    android:progressDrawable="@drawable/ruler"
                     android:thumb="@drawable/preview_seekbar_thumb4" />
             </RelativeLayout>
 
