--- a/app/src/main/res/drawable/preview_seekbar_thumb4.xml
+++ b/app/src/main/res/drawable/preview_seekbar_thumb4.xml
@@ -12,7 +12,7 @@
         android:height="50dp" />
 
     <solid
-        android:color="@android:color/holo_orange_dark" />
+        android:color="@android:color/holo_red_dark" />
 
     <corners
         android:radius="50dp"/>
